--- a/CameraDemo/app/src/main/AndroidManifest.xml
+++ b/CameraDemo/app/src/main/AndroidManifest.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.camerademo"
-    >
-<!--android:sharedUserId="android.uid.system"-->
+    android:sharedUserId="android.uid.system">
 
-    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:allowBackup="true"
