--- a/MyApplication/app/src/main/cpp/CMakeLists.txt
+++ b/MyApplication/app/src/main/cpp/CMakeLists.txt
@@ -19,6 +19,7 @@ add_library( # Sets the name of the library.
         # Provides a relative path to your source file(s).
         egl/native-lib.cpp
         egl/EglHelper.cpp
+        egl/EglThread.cpp
         )
 
 # Searches for a specified prebuilt library and stores the path as a
