--- a/CameraDemo/app/src/main/AndroidManifest.xml
+++ b/CameraDemo/app/src/main/AndroidManifest.xml
@@ -2,12 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.camerademo"
     android:sharedUserId="android.uid.system">
-    <!--android:sharedUserId="android.uid.system"-->
 
-    <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
 
